fixinf style on ie 8

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -262,7 +262,7 @@ blockquote {
   width: 100%;
 }
 
-footer {
+#footer {
   height: 60px;
   background-color: #407eb3;
 
